Fixing the log container box size, which was either too small or extending too far.

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -33,9 +33,8 @@ body {
 #log-container {
     display: none;
     text-align: left;
+    height: 300px;
     overflow: scroll;
-    width: 150;
-    height: 300;
 }
 
 #log-container .label {
